# mimic

./: .gitignore  LICENSE  README.md  iv.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  setup.py
datasets/: __init__.py  iv.py
mimic/datasets/: __init__.py  base.py  cxr.py  downloadable.py  iv.py
mimic/utils/: __init__.py  db.py  env.py  scaler.py  sheet.py
notebooks/: cxr.ipynb  iv.ipynb
utils/: __init__.py  db.py  env.py  scaler.py  sheet.py
