[project]
name = "mimic"
version = "1.0.0"
description = ""
authors = [{ name = "Mohammad Ghazanfari", email = "mgh.5225@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["python-dotenv==1.1.0", "duckdb==1.3.0"]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mimic", "mimic.*"]
