[project]
name = "mimic"
version = "1.2.0"
description = "A modular PyTorch dataset library for working with MIMIC-CXR-JPG and MIMIC-IV datasets."
authors = [{ name = "Mohammad Ghazanfari", email = "mgh.5225@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["python-dotenv>=1.2.1", "duckdb>=1.4.3", "requests>=2.32.5"]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mimic", "mimic.*"]
